--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Tipe
+
 # Logs
 logs
 *.log
@@ -33,11 +35,11 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+/node_modules/
+/jspm_packages/
 
 # TypeScript v1 declaration files
-typings/
+/typings/
 
 # Optional npm cache directory
 .npm
@@ -58,4 +60,8 @@ typings/
 .env
 
 # next.js build output
-.next
+.next/
+
+# Nuxt generate
+/dist/
+/test/unit/coverage
